fix: align text in search

--- a/catalog/view/theme/melle/stylesheet/sass/_search.scss
+++ b/catalog/view/theme/melle/stylesheet/sass/_search.scss
@@ -231,3 +231,7 @@
   height: 100%;
   width: 100%;
 }
+
+.ais-Highlight {
+  justify-content: start;
+}
